--- a/LinkerPlayer/UserControls/PlayerControls.xaml
+++ b/LinkerPlayer/UserControls/PlayerControls.xaml
@@ -143,7 +143,7 @@
 
 
             <TextBlock
-              Name="CurrentSongName"
+              Name="CurrentTrackName"
               Grid.Row="0"
               Margin="0,10,0,0"
               HorizontalAlignment="Center"
